K8/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aerocompliance-pro-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerocompliance-pro-redis
  template:
    metadata:
      labels:
        app: aerocompliance-pro-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine

          ports:
            - containerPort: 6379

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"

          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: aerocompliance-pro-redis
spec:
  selector:
    app: aerocompliance-pro-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
