K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: aerocompliance

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: aerocompliance-pro-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: aerocompliance-pro-frontend-service
                port:
                  number: 3000
